--- a/articles.html
+++ b/articles.html
@@ -137,10 +137,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:200" rel="stylesheet">
     <div class="container ">
         <center>
-            <br>
-            <br>
-            <h2 style="colour:white;">S.E or Social engineering is the term that is technical and non technical way to gather information about the person . it uses psychological fundamentals that is used in information gathering</h1>
-            <h1 style="margin: 80px;padding: auto;color: #a75fff;"><b>Happy Reading!!</b> </h1>
+            <h1 style="margin: 80px;padding: auto;color: #a75fff;"><b>S.E or Social engineering is the term that is technical and non technical way to gather information about the person . it uses psychological fundamentals that is used in information gathering</b> </h1>
         </center>
         <button onclick="myFunction1()" class="box1 ">YOU ARE ENOUGH</button>
         <div id="sman1">
