--- a/home.html
+++ b/home.html
@@ -148,7 +148,7 @@
     .main5,
     .main6 {
         margin: 20px;
-        padding: auto;
+        padding: 10px;
         width: 80%;
     }
     
