--- a/home.html
+++ b/home.html
@@ -442,17 +442,17 @@
             <div class="club1"><div class="main1" style="  
         color: #fb18ff;font-size:4.5rem;"> What is Ethical Hacking?<hr></div>
             <div class="main2" style="padding: auto;">
-                Ans: Ethical hacking refers to the process of using hacking techniques and tools to identify vulnerabilities and weaknesses in computer systems and networks. Unlike malicious hacking, ethical hacking is done with the permission and knowledge of the system or network owner in order to improve the security of the system.
+                Ethical hacking refers to the process of using hacking techniques and tools to identify vulnerabilities and weaknesses in computer systems and networks. Unlike malicious hacking, ethical hacking is done with the permission and knowledge of the system or network owner in order to improve the security of the system.
                 </div></div>
         <div class="club2"><div class="main3" style="  
         color: #fb18ff;font-size:4.5rem;">Why do we need Cyber Security? <hr></div>
-            <div class="main4" ">Ans: Learning cyber security is essential in today's digital age because it helps us protect our personal and professional information from cyber threats. As we become more reliant on technology, the risk of cyber attacks also increases. Cyber security education equips individuals with the knowledge and skills to prevent, detect, and respond to cyber attacks, safeguarding their sensitive data and assets.
+            <div class="main4" >Learning cyber security is essential in today's digital age because it helps us protect our personal and professional information from cyber threats. As we become more reliant on technology, the risk of cyber attacks also increases. Cyber security education equips individuals with the knowledge and skills to prevent, detect, and respond to cyber attacks, safeguarding their sensitive data and assets.
 
             </div></div>
             
             <div class="club3"><div class="main5" style="  
         color: #fb18ff;font-size:4.5rem;">Why join us? <hr></div>
-            <div class="main6">Ans: we aim to provide best available information realted to ethical hacking and cybersecurity. we provide a roadmap in or to pursue ethical hacking as your career.</div></div>
+            <div class="main6">we aim to provide best available information realted to ethical hacking and cybersecurity. we provide a roadmap in or to pursue ethical hacking as your career.</div></div>
             
         </h1>
         </b>
