--- a/articles.html
+++ b/articles.html
@@ -137,8 +137,10 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:200" rel="stylesheet">
     <div class="container ">
         <center>
-            <h1 style="margin: 80px;padding: auto;color: #a75fff;"><b>S.E or Social engineering is the term that is technical and non technical way to gather information about the person . it uses psychological fundamentals that is used in information gathering</b> </h1>
+            <h1 style="margin: 50px;padding:20px;color: #ea5fff;border: 1px solid rgb(187, 0, 255);   border-radius: 15px;"><b>S.E., or social engineering, is the technical as well as non-technical subtype of ethical hacking that uses psychological persuasion to gain victims' trust and information that can be used to get information. This section comprises articles and research that help the hacker understand how human behaviour works. Double-tap on the articles to access them.
+            </b></h1>
         </center>
+
         <button onclick="myFunction1()" class="box1 ">YOU ARE ENOUGH</button>
         <div id="sman1">
             <center> If you really want something to happen, you'll go above and beyond to make it so. On the other hand, if you start to doubt yourself, it's likely that you'll start out justifying your lack of progress to others or to yourself. People can go
@@ -215,7 +217,7 @@
                 be regarded as having a value of zero. Nobody desires a bad or weaker father, mother, brother, sister, or child. Making yourself a little more deserving of the people is now the only way to exist and be given priority. ~ `BY VEDANT SAREEN`</center>
         </div>
         <button onclick="myFunction6()" class="box6">YOU ARE A BITCH</button>
-        <div id="sman6">
+        <div id="sman6"> COMING SOON!!!
             <center> </center>
         </div>
     </div>
