--- a/home.html
+++ b/home.html
@@ -464,7 +464,7 @@
     <center>
         <div class="servc">
             <a href="roadmap.html" class="c1">ROAD MAP</a>
-            <a href="cource.html" class="c2">COURCES</a>
+            <a href="cource.html" class="c2">COURSES</a>
             <a href="articles.html" class="c4" style="text-decoration: none;">Social Engineering</a>
         </div>
     </center>
